--- a/HSOOP/HSOOP.vcxproj
+++ b/HSOOP/HSOOP.vcxproj
@@ -85,62 +85,62 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Cheat.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Cheat_KeyUsing.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Aimbot.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_BunnyHop.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Ceiling.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_ESP.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Fullbright.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_GlowHack.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_IncapNoRecoil.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoFog.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoRecoil.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoSmoke.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_ConfigLoader.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Enemy.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Entity.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_HackProcess.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_HS_SingleInstance.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_MyPlayer.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_SHA256.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Target.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\Hardware.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\LicenseChecker.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\main.cpp" />
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\StaticFunctions.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_Cheat.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_Cheat_KeyUsing.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_Aimbot.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_BunnyHop.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_Ceiling.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_ESP.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_Fullbright.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_GlowHack.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_IncapNoRecoil.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_NoFog.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_NoRecoil.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_NoSmoke.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_ConfigLoader.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_Enemy.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_Entity.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_HackProcess.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_HS_SingleInstance.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_MyPlayer.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_SHA256.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_Target.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\Hardware.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\LicenseChecker.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\main.cpp" />
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\StaticFunctions.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_ACCOUNTS.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_BUTTONS.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_COLORS.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_GAMECONSTANTS.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_GAMECVARS.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_LOADER_PARAMETERS.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_MAIN.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Cheat.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Cheat_KeyUsing.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Aimbot.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_BunnyHop.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Ceiling.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_ESP.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Fullbright.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_GlowHack.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_IncapNoRecoil.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoFog.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoRecoil.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoSmoke.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_ConfigLoader.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Enemy.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Entity.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_HackProcess.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_HS_SingleInstance.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_MyPlayer.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_SHA256.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Target.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\Hardware.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\LicenseChecker.h" />
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\StaticFunctions.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\CFG_ACCOUNTS.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\CFG_BUTTONS.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\CFG_COLORS.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\CFG_GAMECONSTANTS.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\CFG_GAMECVARS.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\CFG_LOADER_PARAMETERS.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\CFG_MAIN.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_Cheat.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_Cheat_KeyUsing.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_Aimbot.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_BunnyHop.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_Ceiling.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_ESP.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_Fullbright.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_GlowHack.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_IncapNoRecoil.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_NoFog.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_NoRecoil.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_CH_NoSmoke.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_ConfigLoader.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_Enemy.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_Entity.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_HackProcess.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_HS_SingleInstance.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_MyPlayer.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_SHA256.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\C_Target.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\Hardware.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\LicenseChecker.h" />
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOP\StaticFunctions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
