--- a/HSOOP/HSOOP.vcxproj.filters
+++ b/HSOOP/HSOOP.vcxproj.filters
@@ -15,168 +15,168 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_BunnyHop.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_BunnyHop.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Aimbot.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_Aimbot.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Ceiling.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_Ceiling.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_ESP.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_ESP.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Fullbright.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_Fullbright.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_GlowHack.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_GlowHack.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_IncapNoRecoil.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_IncapNoRecoil.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoFog.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_NoFog.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoRecoil.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_NoRecoil.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoSmoke.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_NoSmoke.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Cheat.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_Cheat.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Cheat_KeyUsing.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_Cheat_KeyUsing.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_ConfigLoader.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_ConfigLoader.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Enemy.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_Enemy.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Entity.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_Entity.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_HackProcess.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_HackProcess.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_HS_SingleInstance.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_HS_SingleInstance.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_MyPlayer.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_MyPlayer.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_SHA256.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_SHA256.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Target.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_Target.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\Hardware.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPHardware.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\LicenseChecker.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPLicenseChecker.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\main.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPmain.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\StaticFunctions.cpp">
+    <ClCompile Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPStaticFunctions.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Aimbot.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_Aimbot.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_BunnyHop.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_BunnyHop.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Ceiling.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_Ceiling.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_ESP.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_ESP.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_Fullbright.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_Fullbright.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_GlowHack.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_GlowHack.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_IncapNoRecoil.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_IncapNoRecoil.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoFog.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_NoFog.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoRecoil.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_NoRecoil.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_CH_NoSmoke.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_CH_NoSmoke.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Cheat.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_Cheat.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Cheat_KeyUsing.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_Cheat_KeyUsing.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_ConfigLoader.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_ConfigLoader.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Enemy.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_Enemy.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Entity.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_Entity.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_HackProcess.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_HackProcess.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_HS_SingleInstance.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_HS_SingleInstance.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_MyPlayer.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_MyPlayer.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_SHA256.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_SHA256.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\C_Target.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPC_Target.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_ACCOUNTS.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPCFG_ACCOUNTS.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_BUTTONS.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPCFG_BUTTONS.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_COLORS.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPCFG_COLORS.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_GAMECONSTANTS.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPCFG_GAMECONSTANTS.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_GAMECVARS.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPCFG_GAMECVARS.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_LOADER_PARAMETERS.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPCFG_LOADER_PARAMETERS.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\CFG_MAIN.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPCFG_MAIN.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\Hardware.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPHardware.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\LicenseChecker.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPLicenseChecker.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\HSOOP\HSOOP\StaticFunctions.h">
+    <ClInclude Include="C:\Users\neste\Documents\Visual Studio 2017\Projects\Git\HSOOP\HSOOPStaticFunctions.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
